Ajuste de validação